[gd_scene load_steps=8 format=3 uid="uid://ccvum77ne47ov"]

[ext_resource type="Script" path="res://Scene/Trade/Script/TradeUI/goods_trade_details.gd" id="1_2xkig"]
[ext_resource type="Texture2D" uid="uid://dakrf766yuka" path="res://Art/2D/BaseSceneUI/BagUI/BagUI_C.png" id="2_yldtp"]
[ext_resource type="Texture2D" uid="uid://cg1an8a2b5v87" path="res://Art/2D/BaseSceneUI/BaseUI/UI_ButtonC.png" id="3_008mf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8c6s"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6m6fx"]
color = Color(1, 1, 1, 0.729412)
thickness = 10
vertical = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vblt4"]
texture = ExtResource("3_008mf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_52nkf"]
texture = ExtResource("3_008mf")

[node name="GoodsTradeDetails" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_2xkig")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
texture = ExtResource("2_yldtp")
expand_mode = 3

[node name="GoodsName" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.7954
offset_top = 33.0
offset_right = 88.2046
offset_bottom = 84.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "物品名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoodsNumber" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.7954
offset_top = -77.0
offset_right = 54.2046
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "物品数量"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberDown" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.795
offset_top = -35.0
offset_right = -422.795
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
flat = true

[node name="NumberScrollBar" type="HScrollBar" parent="TextureRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.795
offset_top = -29.0
offset_right = 367.205
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/scroll = SubResource("StyleBoxEmpty_f8c6s")
theme_override_styles/grabber = SubResource("StyleBoxLine_6m6fx")
min_value = 1.0
step = 1.0
value = 30.0

[node name="NumberUp" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 411.205
offset_top = -34.0
offset_right = 475.205
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
flat = true

[node name="NumberPrice" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.7954
offset_top = 50.0
offset_right = 54.2046
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "物品总价"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetailsCancel" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(175, 90)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -370.5
offset_top = -152.0
offset_right = -195.5
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_vblt4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vblt4")
theme_override_styles/normal = SubResource("StyleBoxTexture_vblt4")
text = "取消"

[node name="DetailsTrade" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(175, 90)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 173.5
offset_top = -152.0
offset_right = 348.5
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_52nkf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_52nkf")
theme_override_styles/normal = SubResource("StyleBoxTexture_52nkf")
text = "交易"

[node name="Popup" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Popup"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Popup/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.367788, 0.300217, 1)
theme_override_font_sizes/font_size = 70
text = "!!交易失败，现金不足!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="Popup"]
one_shot = true

[connection signal="pressed" from="TextureRect/NumberDown" to="." method="_on_number_down_pressed"]
[connection signal="value_changed" from="TextureRect/NumberScrollBar" to="." method="_on_number_scroll_bar_value_changed"]
[connection signal="pressed" from="TextureRect/NumberUp" to="." method="_on_number_up_pressed"]
[connection signal="pressed" from="TextureRect/DetailsCancel" to="." method="_on_details_cancel_pressed"]
[connection signal="pressed" from="TextureRect/DetailsTrade" to="." method="_on_details_trade_pressed"]
[connection signal="draw" from="Popup" to="." method="_on_popup_draw"]
[connection signal="timeout" from="Popup/Timer" to="." method="_on_timer_timeout"]
